# FiguresSidesAnglesH

./: CMakeLists.txt  CMakePresets.json  EquilateralTriangle.cpp  EquilateralTriangle.h  IsoscelesTriangle.cpp  IsoscelesTriangle.h  Parallelogram.cpp  Parallelogram.h  Quadrangle.cpp  Quadrangle.h  Rectangle.cpp  Rectangle.h  Rhombus.cpp  Rhombus.h  RightTriangle.cpp  RightTriangle.h  Shape.cpp  Shape.h  Square.cpp  Square.h  Triangle.cpp  Triangle.h  main.cpp
