cmake_minimum_required(VERSION 3.10.0)
project(my_second_cmake_project VERSION 0.1.0 LANGUAGES C CXX)

add_executable(my_second_cmake_project EquilateralTriangle.cpp EquilateralTriangle.h IsoscelesTriangle.cpp IsoscelesTriangle.h Parallelogram.cpp Parallelogram.h Quadrangle.cpp Quadrangle.h Rectangle.cpp Rectangle.h Rhombus.cpp Rhombus.h RightTriangle.cpp RightTriangle.h Shape.cpp Shape.h Square.cpp Square.h Triangle.cpp Triangle.h main.cpp)

